[package]
name = "mystu"
version = "0.1.0"
edition = "2024"

[dependencies]
glacier = { git = "https://github.com/aksjfds/glacier.git", branch = "hyper" }
# glacier = { path = "../glacier" }
tokio = { version = "1.44.2", default-features = false }

sqlx = { version = "0.8.5", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "derive",
] }
serde = "1.0.219"
dotenv = "0.15.0"
