[package]
name = "mystu"
version = "0.1.0"
edition = "2024"

[dependencies]
glacier = { git = "https://github.com/aksjfds/glacier.git", branch = "hyper" }
# glacier = { path = "../glacier" }
tokio = { version = "1.44.2", default-features = false }

sqlx = { version = "0.8.5", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "derive",
] }
serde = "1.0.219"
dotenv = "0.15.0"
jsonwebtoken = { version = "9.3.1", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
] }
tracing = { version = "0.1.41", default-features = false, features = [
    "attributes",
] }
redis = { version = "0.29.5", default-features = false, features = [
    "tls-native-tls",
] }
