[package]
name = "mystu"
version = "0.1.0"
edition = "2024"

[dependencies]
glacier = { git = "https://github.com/aksjfds/glacier.git", branch = "hyper" }
# glacier = { path = "../glacier" }
tokio = { version = "1.44.2", default-features = false }


# 数据库处理
sqlx = { version = "0.8.5", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "derive",
] }
redis = { version = "0.29.5", default-features = false, features = [
    "tls-native-tls",
] }


# json处理
serde = "1.0.219"


# 日志处理
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
] }
tracing = { version = "0.1.41", default-features = false, features = [
    "attributes",
] }


# 工具
rand = { version = "0.9.1", default-features = false, features = [
    "thread_rng",
] }
dotenv = { version = "0.15.0", optional = true }
jsonwebtoken = { version = "9.3.1", default-features = false }
lettre = { version = "0.11.15", default-features = false, features = [
    "builder",
    "smtp-transport",
    "native-tls",
] }

[features]
# default = ['dotenv']
